--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
     "importHelpers": true,
     "target": "es6",
     "resolveJsonModule": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    //"typeRoots": [
+    //  "node_modules/@types"
+    //],
     "lib": [
       "es6",
       "dom",
