--- a/chart/template-graphql-typescript/values.yaml
+++ b/chart/template-graphql-typescript/values.yaml
@@ -3,6 +3,8 @@
 # Declare variables to be passed into your templates.
 global: {}
 
+serviceUrl: "inventory-mgmt-tm:80"
+
 replicaCount: 1
 logLevel: "debug"
 
